src/objects/Informacion_financiera__c.object
<CustomObject>
    <fields>
        <fullName>Asignacion_de_cupo__c</fullName>
        <formula>TEXT( Radicacion_de_credito__r.Solicitud_de_credito__r.Oportunidad__r.Asignacion_de_cupo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asignación de cupo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aux_de_alimentacion__c</fullName>
        <label>Aux. de alimentación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aux_de_alimentacion_codeudor1__c</fullName>
        <label>Aux. de alimentación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aux_de_alimentacion_codeudor2__c</fullName>
        <label>Aux. de alimentación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aux_de_alimentacion_codeudor3__c</fullName>
        <label>Aux. de alimentación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calificacion2__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion2_codeudor1__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion2_prestamo_codeudor1__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion2_prestamo_deudor__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion2_sector_real_codeudor1__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion2_sector_real_deudor__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_codeudor1__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_codeudor2__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_prestamo__c</fullName>
        <label>Calificacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_prestamo_codeudor1__c</fullName>
        <label>Calificacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_prestamo_codeudor2__c</fullName>
        <label>Calificacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_sector_real__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_sector_real_codeudor1__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion_sector_real_codeudor2__c</fullName>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Informaciones_financieras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Informaciones_financieras1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Informaciones_financieras2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Informaciones_financieras3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concepto_de_analisis__c</fullName>
        <label>Concepto de analisis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Costos_y_gastos_actividad_codeudor1__c</fullName>
        <label>Costos y gastos actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costos_y_gastos_actividad_codeudor2__c</fullName>
        <label>Costos y gastos actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costos_y_gastos_actividad_codeudor3__c</fullName>
        <label>Costos y gastos actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costos_y_gastos_actividad_principal__c</fullName>
        <label>Costos y gastos actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuota_credito_solicitado__c</fullName>
        <label>Cuota crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuota_credito_solicitado_codeudor1__c</fullName>
        <label>Cuota crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuota_credito_solicitado_codeudor2__c</fullName>
        <label>Cuota crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cuota_credito_solicitado_codeudor3__c</fullName>
        <label>Cuota crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Descuentos_de_nomina_u_otros_codeudor1__c</fullName>
        <formula>Ingreso_actividad_principal_codeudor1__c *0.08</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuentos de nómina u otros pagos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Descuentos_de_nomina_u_otros_codeudor2__c</fullName>
        <formula>Ingreso_actividad_principal_codeudor2__c *0.08</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuentos de nómina u otros pagos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Descuentos_de_nomina_u_otros_codeudor3__c</fullName>
        <formula>Ingreso_actividad_principal_codeudor3__c *0.08</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuentos de nómina u otros pagos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Descuentos_de_nomina_u_otros_pagos__c</fullName>
        <formula>Ingreso_actividad_principal__c *0.08</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuentos de nómina u otros pagos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero__c</fullName>
        <formula>Total_obligaciones_financieras__c / Total_ingresos_netos_parciales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endeudamiento financiero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_cuota_propues__c</fullName>
        <formula>( Total_obligaciones_financieras__c + Valor_cuota_sugerida__c )/ Ingreso_bruto_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endeudamiento financiero + cuota propues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_cuota_solic__c</fullName>
        <formula>( Total_obligaciones_financieras__c + Cuota_credito_solicitado__c )/ Total_ingresos_netos_parciales__c</formula>
        <label>Endeudamiento financiero + cuota solic.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entidad2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad2_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad2_prestamo_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad2_prestamo_deudor__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad2_sector_real_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad2_sector_real_deudor__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_cedente__c</fullName>
        <formula>TEXT(Radicacion_de_credito__r.Solicitud_de_credito__r.Oportunidad__r.Entidad_cedente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entidad cedente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_codeudor2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_prestamo__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_prestamo_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_prestamo_codeudor2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_sector_real__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_sector_real_codeudor1__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_sector_real_codeudor2__c</fullName>
        <label>Entidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado2__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vigente</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado2_codeudor1__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vigente</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado2_prestamo_codeudor1__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado2_prestamo_deudor__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado2_sector_real_codeudor1__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado2_sector_real_deudor__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vigente</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_codeudor1__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vigente</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_codeudor2__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vigente</fullName>
                </value>
                <value>
                    <fullName>Mora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_prestamo__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_prestamo_codeudor1__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_prestamo_codeudor2__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_sector_real__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_sector_real_codeudor1__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_sector_real_codeudor2__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_analisis__c</fullName>
        <label>Fecha análisis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_cambio_de_condiciones__c</fullName>
        <label>Fecha cambio de condiciones</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gastos_de_arriendo__c</fullName>
        <label>Gastos de arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_de_arriendo_codeudor1__c</fullName>
        <label>Gastos de arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_de_arriendo_codeudor2__c</fullName>
        <label>Gastos de arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_de_arriendo_codeudor3__c</fullName>
        <label>Gastos de arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales_codeudor1__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales_codeudor2__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gastos_personales_codeudor3__c</fullName>
        <label>Gastos personales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Horas_extras__c</fullName>
        <label>Horas extras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Horas_extras_codeudor1__c</fullName>
        <label>Horas extras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Horas_extras_codeudor2__c</fullName>
        <label>Horas extras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Horas_extras_codeudor3__c</fullName>
        <label>Horas extras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Id_Radicacion__c</fullName>
        <externalId>true</externalId>
        <label>Id Radicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingreso_actividad_principal__c</fullName>
        <label>Ingreso actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_actividad_principal_codeudor1__c</fullName>
        <label>Ingreso actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_actividad_principal_codeudor2__c</fullName>
        <label>Ingreso actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_actividad_principal_codeudor3__c</fullName>
        <label>Ingreso actividad principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_bruto_total__c</fullName>
        <formula>Total_ingreso_bruto__c + Total_ingreso_bruto_codeudor1__c + Total_ingreso_bruto_codeudor2__c + Total_ingreso_bruto_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso bruto total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_disponible_ajustado_total__c</fullName>
        <formula>Ingreso_neto_parcial__c - Total_egresos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto disponible ajustado total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_disponible_codeudor1__c</fullName>
        <formula>Ingreso_neto_parcial_codeudor1__c - Total_egresos_codeudor1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto disponible ajustado total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_disponible_codeudor2__c</fullName>
        <formula>Ingreso_neto_parcial_codeudor2__c - Total_egresos_codeudor2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto disponible ajustado total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_disponible_codeudor3__c</fullName>
        <formula>Ingreso_neto_parcial_codeudor3__c - Total_egresos_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto disponible ajustado total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_parcial__c</fullName>
        <formula>Total_ingreso_bruto__c - Costos_y_gastos_actividad_principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto parcial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_parcial_codeudor1__c</fullName>
        <formula>Total_ingreso_bruto_codeudor1__c - Costos_y_gastos_actividad_codeudor1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto parcial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_parcial_codeudor2__c</fullName>
        <formula>Total_ingreso_bruto_codeudor2__c - Costos_y_gastos_actividad_codeudor2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto parcial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_parcial_codeudor3__c</fullName>
        <formula>Total_ingreso_bruto_codeudor3__c - Costos_y_gastos_actividad_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto parcial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_total__c</fullName>
        <formula>Ingreso_neto_disponible_ajustado_total__c + Ingreso_neto_disponible_codeudor1__c + Ingreso_neto_disponible_codeudor2__c + Ingreso_neto_disponible_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso neto total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingreso_requerido_bruto_para_credito__c</fullName>
        <formula>( Cuota_credito_solicitado__c *100)/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso requerido bruto para crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>N_mero_de_documento_codeudor_1__c</fullName>
        <formula>Radicacion_de_credito__r.Codeudor_1__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_de_consultas_ultimos_seis_codeudor1__c</fullName>
        <label>No. de consultas últimos seis meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_de_consultas_ultimos_seis_codeudor2__c</fullName>
        <label>No. de consultas últimos seis meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_de_consultas_ultimos_seis_codeudor3__c</fullName>
        <label>No. de consultas últimos seis meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_de_consultas_ultimos_seis_meses__c</fullName>
        <label>No. de consultas últimos seis meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_analista__c</fullName>
        <label>Nombre analista</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nazly Trujillo</fullName>
                </value>
                <value>
                    <fullName>Leidy Sierra</fullName>
                </value>
                <value>
                    <fullName>Andrea Riveros</fullName>
                </value>
                <value>
                    <fullName>Sandra Zamora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_documento_deudor__c</fullName>
        <formula>Radicacion_de_credito__r.Solicitud_de_credito__r.Cliente_deudor__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento deudor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligaciones_financieras__c</fullName>
        <label>Obligaciones financieras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>